--- a/app/src/main/res/layout/item_transferlist.xml
+++ b/app/src/main/res/layout/item_transferlist.xml
@@ -36,7 +36,9 @@
             android:textAlignment="textStart"
             android:gravity="center"
             android:textColor="@color/black"
-            android:layout_width="50dp"
+            android:layout_width="70dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp"
             android:layout_height="match_parent"
             tools:ignore="RtlCompat" />
 
