--- a/app/src/main/res/drawable/round_box_yellow.xml
+++ b/app/src/main/res/drawable/round_box_yellow.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/sa_full_transparent" />
     <corners android:radius="5dp" />
     <stroke android:width="1dip" android:color="@color/sa_yellow" />
     <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
