--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="staff_blue">#29B6F6</color>
     <color name="staff_dark">#3B3B3B</color>
+    <color name="staff_gray">#777777</color>
     <color name="staff_dark2">#2F2F2F</color>
     <color name="lightgray">#EDEDED</color>
     <color name="text_gray">#BBBBBB</color>
