--- a/app/src/main/res/layout/item_directlist.xml
+++ b/app/src/main/res/layout/item_directlist.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="0dp"
     android:layout_margin="0dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:padding="0dp"
         android:layout_margin="0dp"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
 
         <TextView
             android:id="@+id/date_for_result"
@@ -48,7 +49,7 @@
                 android:padding="0dp"
                 android:layout_margin="0dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:id="@+id/llWaitInfo"
@@ -79,14 +80,14 @@
                     android:padding="0dp"
                     android:layout_margin="0dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                     <LinearLayout
                         android:orientation="vertical"
                         android:padding="0dp"
                         android:layout_width="100dp"
                         android:layout_margin="0dp"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
 
                         <ImageView
                             android:id="@+id/aclogo"
@@ -101,7 +102,7 @@
                         <TextView
                             android:id="@+id/acname"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:textAlignment="center"
                             android:textSize="12sp"
                             android:layout_margin="0dp"
@@ -109,13 +110,19 @@
                             android:layout_marginBottom="10dp"
                             android:textColor="@color/black" />
 
+                        <TextView
+                            android:id="@+id/itemfav"
+                            android:visibility="gone"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp" />
+
                     </LinearLayout>
 
                     <LinearLayout
                         android:orientation="vertical"
                         android:padding="0dp"
                         android:layout_width="70dp"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:textSize="10sp"
@@ -154,7 +161,7 @@
                         android:paddingEnd="0dp"
                         android:paddingBottom="0dp"
                         android:layout_width="80dp"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
 
                         <ImageView
                             android:id="@+id/planepic"
@@ -183,7 +190,7 @@
                         android:orientation="vertical"
                         android:padding="0dp"
                         android:layout_width="70dp"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/nextDay"
