--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="top"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="16dp">
 
         <ImageView
             android:layout_width="match_parent"
@@ -40,31 +42,31 @@
                 android:layout_marginTop="7dp"
                 android:layout_weight="9.0"
                 android:minWidth="300dp"
-                android:textColor="@color/black"
                 android:onClick="datepicktv_click"
+                android:textColor="@color/black"
                 android:textSize="15sp" />
 
             <ImageButton
                 android:id="@+id/datebutton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
                 android:layout_weight="1.0"
                 android:background="@color/white"
                 android:minWidth="30dp"
                 android:minHeight="30dp"
-                android:layout_marginEnd="20dp"
-                android:scaleType="fitCenter"
                 android:onClick="datebutton_click"
+                android:scaleType="fitCenter"
                 android:src="@drawable/cal"
                 tools:ignore="ContentDescription" />
 
         </LinearLayout>
 
         <ImageView
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:background="@color/lightgray"
             android:layout_height="1px"
+            android:layout_marginTop="5dp"
+            android:background="@color/lightgray"
             tools:ignore="ContentDescription" />
 
         <LinearLayout
@@ -84,36 +86,34 @@
                     android:id="@+id/origin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/label_origin_cuty"
-                    android:textSize="15sp"
-                    android:minHeight="20dp"
-                    android:textColor="@color/text_gray"
                     android:layout_marginStart="30dp"
-                    android:layout_marginEnd="20dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:minHeight="20dp"
                     android:onClick="origin_click"
-                    />
+                    android:text="@string/label_origin_cuty"
+                    android:textColor="@color/text_gray"
+                    android:textSize="15sp" />
 
                 <ImageView
-                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:background="@color/lightgray"
                     android:layout_height="1dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/lightgray"
                     tools:ignore="ContentDescription" />
 
                 <TextView
                     android:id="@+id/destination"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/label_destination_city"
-                    android:textSize="15sp"
-                    android:minHeight="20dp"
-                    android:textColor="@color/text_gray"
                     android:layout_marginStart="30dp"
-                    android:layout_marginEnd="20dp"
                     android:layout_marginTop="30dp"
+                    android:layout_marginEnd="20dp"
+                    android:minHeight="20dp"
                     android:onClick="destination_click"
-                    />
+                    android:text="@string/label_destination_city"
+                    android:textColor="@color/text_gray"
+                    android:textSize="15sp" />
 
             </LinearLayout>
 
@@ -121,97 +121,202 @@
                 android:id="@+id/btReplace"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="20dp"
+                android:background="@color/white"
                 android:minWidth="30dp"
                 android:minHeight="30dp"
                 android:scaleType="fitCenter"
-                android:background="@color/white"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="10dp"
-                android:layout_gravity="center"
                 android:src="@drawable/arr"
                 tools:ignore="ContentDescription" />
 
         </LinearLayout>
 
         <ImageView
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:background="@color/lightgray"
             android:layout_height="1dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/lightgray"
             tools:ignore="ContentDescription" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:text="@string/label_passengers"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:gravity="center_vertical"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="40dp"
-                />
+                android:gravity="center_vertical"
+                android:text="@string/label_passengers"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
             <ImageButton
                 android:id="@+id/minusbut"
+                style="@style/NotTintedButton"
                 android:layout_width="50dp"
                 android:layout_height="40dp"
-                android:src="@drawable/minus_blue"
-                android:background="@drawable/minus_button_off"
-                style="@style/NotTintedButton"
                 android:layout_marginTop="10dp"
+                android:background="@drawable/minus_button_off"
+                android:src="@drawable/minus_blue"
                 tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/cntpass"
                 android:layout_width="50dp"
                 android:layout_height="40dp"
-                android:text="1"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:background="@drawable/border_top_bottom"
                 android:layout_marginTop="20px"
-                />
+                android:background="@drawable/border_top_bottom"
+                android:gravity="center"
+                android:text="1"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
             <ImageButton
                 android:id="@+id/plusbut"
                 android:layout_width="50dp"
                 android:layout_height="40dp"
-                android:src="@drawable/plus_white"
-                android:background="@drawable/plus_button_on"
                 android:layout_marginTop="10dp"
+                android:background="@drawable/plus_button_on"
+                android:src="@drawable/plus_white"
                 tools:ignore="ContentDescription" />
 
         </LinearLayout>
 
         <Button
             android:id="@+id/btSearch"
+            style="@style/NotTintedButton"
             android:layout_width="300dp"
             android:layout_height="50dp"
-            style="@style/NotTintedButton"
-            android:text="@string/label_search"
-            android:textSize="20sp"
-            android:layout_marginTop="50dp"
             android:layout_marginStart="55dp"
-            android:shadowColor="@color/white"
-            android:textColor="@color/staff_blue"
-            android:outlineSpotShadowColor="@color/white"
+            android:layout_marginTop="50dp"
             android:background="@drawable/search_button_off"
-            />
+            android:outlineSpotShadowColor="@color/white"
+            android:shadowColor="@color/white"
+            android:text="@string/label_search"
+            android:textColor="@color/staff_blue"
+            android:textSize="20sp" />
 
-        <TextView android:id="@+id/lbOriginId" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
-        <TextView android:id="@+id/lbDestinationId" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
-        <TextView android:id="@+id/lbOriginCode" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
-        <TextView android:id="@+id/lbDestinationCode" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
-        <TextView android:id="@+id/lbOriginCountry" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
-        <TextView android:id="@+id/lbDestinationCountry" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tvHomeSearchCurrent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Search for flights on the current date only"
+            android:textAlignment="center" />
+
+        <LinearLayout
+            android:id="@+id/llHomeTryPremium"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:padding="0dp">
+
+            <TextView
+                android:id="@+id/tvHomeTryPremium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Try premium"
+                android:textColor="@color/staff_blue"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:scaleType="fitXY"
+                android:paddingBottom="4dp"
+                android:src="@drawable/prem" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="30dp"
+            android:layout_marginBottom="20dp">
+
+            <TextView
+                android:id="@+id/tvFreePlan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:text="Free plan"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <LinearLayout
+                android:id="@+id/llPremiumPlan"
+                android:layout_gravity="bottom"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="5dp"
+                    android:scaleType="fitXY"
+                    android:paddingBottom="2dp"
+                    android:src="@drawable/prem" />
+
+                <TextView
+                    android:id="@+id/tvPremium"
+                    android:text="Premium"
+                    android:textColor="@color/staff_blue"
+                    android:textSize="16sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/lbOriginId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/lbDestinationId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/lbOriginCode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/lbDestinationCode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/lbOriginCountry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/lbDestinationCountry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
