--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -18,7 +18,7 @@
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@drawable/settings"
-        android:title="Settings" />
+        android:icon="@drawable/profile4"
+        android:title="Profile" />
 
 </menu>
