--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -327,6 +327,18 @@
             tools:listitem="@layout/item_directlist" />
 
         <Button
+            android:id="@+id/btResCommercial"
+            android:text="Commercial fares from $450"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:background="@drawable/search_button_on"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            />
+
+        <Button
             android:id="@+id/btFinalNew"
             android:layout_width="300dp"
             android:layout_height="50dp"
