--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -315,16 +315,24 @@
 
         </LinearLayout>
 
-        <ListView
-            android:id="@+id/directlistview"
-            android:isScrollContainer="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="0dp"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginTop="10dp"
-            tools:listitem="@layout/item_directlist" />
+        <LinearLayout
+            android:id="@+id/llResForListview"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+                <ListView
+                    android:id="@+id/directlistview"
+                    android:scrollbarSize="2dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:scrollIndicators="right"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginTop="10dp"
+                    tools:listitem="@layout/item_directlist" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/btResCommercial"
