--- a/app/src/main/res/layout/fragment_flight.xml
+++ b/app/src/main/res/layout/fragment_flight.xml
@@ -49,27 +49,55 @@
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
-            <ImageButton
-                android:id="@+id/btSubscribe_one"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:background="@color/staff_blue"
-                android:layout_margin="0dp"
+            <LinearLayout
+                android:id="@+id/llOneBellCoins"
+                android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:src="@drawable/subscribe"
-                tools:ignore="ContentDescription" />
+                android:padding="0dp"
+                android:layout_margin="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/lbSubLost"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:background="@color/staff_blue"
-                android:gravity="center"
-                android:layout_marginStart="1dp"
-                android:text="5"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:textSize="26sp" />
+                <ImageView
+                    android:id="@+id/ivOneCoins"
+                    android:src="@drawable/coins"
+                    android:minHeight="22dp"
+                    android:minWidth="20dp"
+                    android:scaleType="fitXY"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tvOneCoins"
+                    android:text="0"
+                    android:textColor="@color/staff_blue"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:src="@drawable/bell"
+                    android:minHeight="22dp"
+                    android:minWidth="20dp"
+                    android:scaleType="fitXY"
+                    android:layout_marginEnd="2dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tvOneSubLost"
+                    android:text="5"
+                    android:textColor="@color/staff_blue"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -222,13 +250,118 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/llOneAgentInfo"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tvOneAgentInfo"
+                android:textColor="@color/black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Flight load details were received from agent Sunni 01m ago" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content">
+
+                    <TextView
+                        android:text="Economy"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/tvOneAgentEconomy"
+                        android:textColor="@color/black"
+                        android:textAlignment="center"
+                        android:text="14"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content">
+
+                    <TextView
+                        android:text="Business"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/tvOneAgentBusiness"
+                        android:textColor="@color/black"
+                        android:textAlignment="center"
+                        android:text="10"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content">
+
+                    <TextView
+                        android:text="Standby"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/tvOneAgentStandby"
+                        android:textColor="@color/black"
+                        android:textAlignment="center"
+                        android:text="1"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+             </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
             android:orientation="horizontal"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:text="@string/label_status_current"
+                android:text="Status:"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -245,17 +378,102 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/llSeatsInfo"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="@string/label_classes_available"
+                android:layout_marginTop="10dp"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/classes_one"
+                android:textSize="18sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btOneAction"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            style="@style/NotTintedButton"
+            android:text="SELECT FLIGHT"
+            android:textSize="20sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center_horizontal"
+            android:shadowColor="@color/staff_blue"
+            android:textColor="@color/white"
+            android:background="@drawable/search_button_on"
+            />
+
+        <LinearLayout
+            android:id="@+id/llOneButtons"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btOneRequest"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="45dp"
+                style="@style/NotTintedButton"
+                android:text="REQUEST"
+                android:textSize="20sp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="10dp"
+                android:shadowColor="@color/staff_blue"
+                android:textColor="@color/white"
+                android:background="@drawable/search_button_on"
+                />
+
+            <Button
+                android:id="@+id/btOneSubscribe"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="45dp"
+                style="@style/NotTintedButton"
+                android:text="SUBSCRIBE"
+                android:textSize="20sp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="5dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="10dp"
+                android:shadowColor="@color/staff_blue"
+                android:textColor="@color/white"
+                android:background="@drawable/search_button_on"
+                />
+
+        </LinearLayout>
+
         <TextView
-            android:text="@string/label_classes_available"
-            android:layout_marginTop="10dp"
-            android:textSize="14sp"
+            android:id="@+id/tvOneNewFeature"
+            android:padding="5dp"
+            android:text="New feature! Use the Request button to, clarify seat availability via this airline's agent. This can be helpful on the day of departure."
+            android:background="@drawable/box_green"
             android:textColor="@color/black"
+            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/classes_one"
-            android:textSize="18sp"
+            android:id="@+id/tvOneShareLoads"
+            android:textColor="@color/black"
+            android:padding="5dp"
+            android:text="Share loads data with other SA commuters and get premium for free."
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -267,21 +485,6 @@
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/btSearch_one"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            style="@style/NotTintedButton"
-            android:text="@string/label_new_search"
-            android:onClick="search_click_one"
-            android:textSize="20sp"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center_horizontal"
-            android:shadowColor="@color/staff_blue"
-            android:textColor="@color/white"
-            android:background="@drawable/search_button_on"
-            />
 
     </LinearLayout>
 
